--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-29  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoClassType.cs
+	(MonoClassType.ResolveClass): Resolve our parent first.
+
 2005-09-28  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Expression.cs
