--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-05  Martin Baulig  <martin@ximian.com>
+
+	* classes/Style.cs (DisplayFormat): New public enum.
+	(Style.FormatObject): Added `DisplayFormat format' argument.
+
 2005-09-29  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetEnumType.cs (TargetEnumType.GetMember): Removed.
