--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-11  Martin Baulig  <martin@ximian.com>
 
+	* classes/StackFrame.cs
+	(SimpleStackFrame): Make this `internal', not `public'.
+
+2005-10-11  Martin Baulig  <martin@ximian.com>
+
 	* classes/MethodBase.cs: Renamed to Method.cs.
 	(MethodBase): Renamed to `Method'.
 
