2005-10-11  Martin Baulig  <martin@ximian.com>
	* arch/Architecture.cs: The stack unwinding methods now operate on
	`StackFrame's instead of `SimpleStackFrame's.


svn path=/trunk/debugger/; revision=51608

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-11  Martin Baulig  <martin@ximian.com>
 
+	* arch/Architecture.cs: The stack unwinding methods now operate on
+	`StackFrame's instead of `SimpleStackFrame's.
+
+2005-10-11  Martin Baulig  <martin@ximian.com>
+
 	* classes/StackFrame.cs
 	(StackFrame.SourceAddress): Create this lazily.
 
