2005-10-11  Martin Baulig  <martin@ximian.com>
	* classes/StackFrame.cs (SimpleStackFrame): Removed.


svn path=/trunk/debugger/; revision=51610

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-11  Martin Baulig  <martin@ximian.com>
 
+	* classes/StackFrame.cs (SimpleStackFrame): Removed.
+
+2005-10-11  Martin Baulig  <martin@ximian.com>
+
 	* arch/Architecture.cs: The stack unwinding methods now operate on
 	`StackFrame's instead of `SimpleStackFrame's.
 
