--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-10-17  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Expression.cs (VariableAccessExpression.DoAssign): Call
+	`Convert.ImplicitConversionRequired' on the object to convert it
+	to the correct type.
+
+2005-10-17  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Expression.cs
 	(MethodGroupExpression.ctor): Take a `TargetFunctionType[]' array
 	instead of an `ArrayList'.
