2005-10-18  Martin Baulig  <martin@ximian.com>
	* languages/TargetClassObject.cs
	(TargetClassObject.GetCurrentObject): New public abstract method.

	* frontend/Expression.cs
	(Cast.TryCurrentCast): Make this actually work.


svn path=/trunk/debugger/; revision=51842

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-10-18  Martin Baulig  <martin@ximian.com>
 
+	* languages/TargetClassObject.cs
+	(TargetClassObject.GetCurrentObject): New public abstract method.
+
+	* frontend/Expression.cs
+	(Cast.TryCurrentCast): Make this actually work.
+
+2005-10-18  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/x86_64-arch.c, i386-arch.c: Save and restore
 	`inferior->last_signal' across invocations.
 
